[gd_scene load_steps=15 format=3 uid="uid://bgthciff800fo"]

[ext_resource type="Script" path="res://Enemies/tank/orbital_strike.gd" id="1_c7jfn"]

[sub_resource type="CylinderMesh" id="CylinderMesh_x1nba"]
resource_local_to_scene = true
top_radius = 0.05
bottom_radius = 0.05
height = 0.001

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8osum"]
resource_local_to_scene = true
blend_mode = 1
albedo_color = Color(0.696266, 0, 0.111724, 1)

[sub_resource type="TorusMesh" id="TorusMesh_4nx1o"]
resource_local_to_scene = true
inner_radius = 0.3
outer_radius = 0.31

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2iiqq"]
resource_local_to_scene = true
blend_mode = 3
albedo_color = Color(52.15, 1, 0, 1)

[sub_resource type="Animation" id="Animation_8273s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lazer:mesh:top_radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lazer:mesh:bottom_radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("warning_circle:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("warning_circle:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(6.025, 6.025, 6.025)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("lazer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_t4l3h"]
resource_name = "circle_animation"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lazer:mesh:top_radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 4.5, 4.96667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.01, 0.5, 0.5, 0.01]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lazer:mesh:bottom_radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.01, 0.5, 0.5, 0.01]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("warning_circle:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("warning_circle:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(4.5, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(6.025, 6.025, 6.025), Vector3(0.02, 0.02, 0.02)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("lazer:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rs4gj"]
_data = {
"RESET": SubResource("Animation_8273s"),
"circle_animation": SubResource("Animation_t4l3h")
}

[sub_resource type="CylinderMesh" id="CylinderMesh_g6lb6"]
resource_local_to_scene = true
top_radius = 0.0
bottom_radius = 0.0
height = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_po7ft"]
resource_local_to_scene = true
blend_mode = 2
albedo_color = Color(0, 1, 0.223529, 1)

[sub_resource type="Animation" id="Animation_rtjou"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("warning_circle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.01, 0.01, 0.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("warning_circle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("outer ring:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5v1al"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("warning_circle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.01, 0.01, 0.01), Vector3(6.025, 6.025, 6.025)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playattack"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("warning_circle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("outer ring:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cklub"]
_data = {
"RESET": SubResource("Animation_rtjou"),
"attack": SubResource("Animation_5v1al")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kxg2k"]
height = 5.08942
radius = 0.302499

[node name="OrbitalStrike" type="Node3D"]
transform = Transform3D(80, 0, 0, 0, 80, 0, 0, 0, 80, 0, 0, 0)
top_level = true
script = ExtResource("1_c7jfn")
damage = 50

[node name="warning_circle" type="MeshInstance3D" parent="."]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, -0.00983429, 0)
mesh = SubResource("CylinderMesh_x1nba")
surface_material_override/0 = SubResource("StandardMaterial3D_8osum")

[node name="outer ring" type="MeshInstance3D" parent="."]
mesh = SubResource("TorusMesh_4nx1o")
surface_material_override/0 = SubResource("StandardMaterial3D_2iiqq")

[node name="attack_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rs4gj")
}

[node name="lazer" type="MeshInstance3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.921325, 0, 0, 0, 0.6, 0, 1.86249, 0)
mesh = SubResource("CylinderMesh_g6lb6")
surface_material_override/0 = SubResource("StandardMaterial3D_po7ft")

[node name="telegraph_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cklub")
}

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.50834, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_kxg2k")
disabled = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
